# 028-simple-queue-system

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  Readme.md  build.rs  config.js  env.example  errorHandlers.js  eslint.config.mjs  generate_stems_gemini.py  generate_stems_google_translate.py  package-lock.json  package.json  rateLimiters.js  requirements.txt  rollup.config.mjs  server.js  tailwind.config.js  tailwind.css  utils.js
.devcontainer/: devcontainer.json  postCreateCommand.sh  postCreateCommandUser.sh
.github/: dependabot.yml  docker-build-push.yml
.github/workflows/: docker-build-push.yml  ghcr-cleanup.yml
deploy/kiosk/: rpi-kiosk-launch.sh
deploy/quadlets/: queue-app.container
deploy/scripts/: volume-setup.sh
deploy/server/: queue-app.defaults  queue-app.service
deploy/systemd/: volume.service
patches/: node-gtts+2.0.2.patch
public/: caller.html  index.html  operator.html  signage-original.html  signage.html  signage_with_028_qr.html  signage_with_QR.html  site.webmanifest  tv.html
public/css/: caller.css  signage-legacy.css  styles.css  tailwind.css  tv.css
public/js/: api_client.js  caller.js  common.js  operator_ui.js  signage_ui.js  sse_handler.js  tv.js  ui_helpers.js
public/js/api/: queueApiClient.js
public/js/core/: constants.js  feedback.js  formatting.js  logger.js  refresh.js  uiHelpers.js  validation.js
public/js/pages/operator/: index.js
public/js/pages/signage/: index.js  signage_with_qr.js
public/js/polyfills/: index.js
public/js/sse/: eventStream.js
routes/: call.js  events.js  speak.js  triggerAnnouncement.js
services/: queueService.js
src/: config.js  config.rs  errorHandlers.js  generateTts.js  health.rs  lib.rs  logger.js  main.rs  rateLimiters.js  server.js  sse.rs  state.rs  utils.js
src/announcements/: manager.rs  mod.rs
src/api/: announcements.rs  events.rs  mod.rs  queue.rs  routes.rs  translator.rs  tts.rs
src/application/: announcements.rs  mod.rs  queue.rs  translator.rs  tts.rs
src/public/: caller.html  site.webmanifest  tv.html
src/public/css/: caller.css  tv.css
src/public/js/: caller.js  tv.js
src/queue/: manager.rs  mod.rs
src/routes/: call.js  events.js  speak.js  supportedLangs.js
src/services/: queueService.js  ttsService.js
src/sse/: manager.rs  mod.rs
src/tts/: manager.rs  mod.rs
