[package]
name = "queue-calling-system"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
envconfig = "0.10"
envconfig_derive = "0.10"
fake_user_agent = "0.2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "brotli", "gzip", "zstd", "deflate"] }
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
urlencoding = "2.1"
walkdir = "2"
tower-http = { version = "0.5", features = ["fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
pretty_assertions = "1.4"
tracing-test = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
